modified the card title

--- a/card.css
+++ b/card.css
@@ -97,6 +97,9 @@ button {
     }
     h1{
         font-size: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .inner-card{
         display: flex;
